[gd_scene load_steps=4 format=3 uid="uid://htm5u4j7liqd"]

[ext_resource type="Script" uid="uid://dd46c8rr1e7eu" path="res://scripts/score.gd" id="1_bak1h"]
[ext_resource type="Texture2D" uid="uid://bfe8n0ii6tod0" path="res://art/Akishi BG 4.jpg" id="2_plgac"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lew60"]
texture = ExtResource("2_plgac")

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bak1h")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_lew60")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.0
offset_right = 209.0
offset_bottom = 59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50

[node name="increase_points" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = 86.0
offset_right = -4.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Add Points"

[node name="decrease_points" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = 86.0
offset_right = 243.0
offset_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Remove Points"

[node name="Return" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 268.0
offset_right = 146.0
offset_bottom = 332.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Return"

[connection signal="pressed" from="increase_points" to="." method="_on_increase_points_pressed"]
[connection signal="pressed" from="decrease_points" to="." method="_on_decrease_points_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
